Fixed mobile navigation

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,14 +13,14 @@
     <section class="mobile-navigation-holder">
         <nav class="mobile-navigation">
             <a href="#" class="selected">Top Stories</a>
-            <a href="#">Politics</a>
-            <a href="#">Social</a>
-            <a href="#">Economics</a>
-            <a href="#">Sports</a>
-            <a href="#">Science</a>
-            <a href="#">Tech</a>
-            <a href="#">Culture</a>
-            <a href="#">World</a>
+            <a href="#category/politics">Politics</a>
+            <a href="#category/social">Social</a>
+            <a href="#category/economics">Economics</a>
+            <a href="#category/economics">Sports</a>
+            <a href="#category/science">Science</a>
+            <a href="#category/tech">Tech</a>
+            <a href="#category/culture">Culture</a>
+            <a href="#category/world">World</a>
         </nav>
     </section>
 
