Fixed wrong href in mobile menu

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,7 +16,7 @@
             <a href="#category/politics">Politics</a>
             <a href="#category/social">Social</a>
             <a href="#category/economics">Economics</a>
-            <a href="#category/economics">Sports</a>
+            <a href="#category/sport">Sports</a>
             <a href="#category/science">Science</a>
             <a href="#category/tech">Tech</a>
             <a href="#category/culture">Culture</a>
