--- a/client/templates/episode.hbs
+++ b/client/templates/episode.hbs
@@ -1,6 +1,6 @@
 <h1><a href="{{ link }}" target="_blank">{{ title }}</a></h1>
 
-<a href="#" class="post-time">{{ name }} – {{ publicationDate }}</a>
+<a href="#" class="post-time">{{ name }} – {{ formattedDate }}</a>
 
 {{#if image}}
     <a href="#" class="illustration" style="background-image: url('{{ image }}')"></a>
