Changed texts for test

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,9 +3,9 @@
 <section class="news-feed">
 
     <header class="main-header">
-        <h1>Plain news</h1>
-        <h2>it's easy to understand. <span class="highlight-color pointer j-show-about">Why?</span></h2>
-        <div class="mobile-about-project hide"><span class="message">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, commodi, officiis, tempora doloremque illo obcaecati fuga id aliquam aspernatur eaque numquam qui eius. Placeat, laborum, ea quidem nostrum at tempore.</span></div>
+        <h1>UpVoc</h1>
+        <h2>improve your English vocabulary. <span class="highlight-color pointer j-show-about">Why?</span></h2>
+        <div class="mobile-about-project hide"><span class="message">Efficiently upgrade your English vocabulary throug reading actual news from CNN, BBC, TechCruch, USAToday, Forbes and others.</span></div>
     </header>
 
     <section class="language-lvl-selector j-languageLVL">
@@ -31,5 +31,5 @@
 
 </section>
 <aside class="sidebar">
-    <div class="about-project hide"><span class="message">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, commodi, officiis, tempora doloremque illo obcaecati fuga id aliquam aspernatur eaque numquam qui eius. Placeat, laborum, ea quidem nostrum at tempore.</span></div>
+    <div class="about-project hide"><span class="message">Efficiently upgrade your English vocabulary throug reading actual news from CNN, BBC, TechCruch, USAToday, Forbes and others.</span></div>
 </aside>
