Changed site to upvoc layout

--- a/client/templates/menu.hbs
+++ b/client/templates/menu.hbs
@@ -1,11 +1,11 @@
 <nav class="topics j-topics">
-    <a href="#"><span class="topic-link">Top Stories</span></a>
-    <a href="#category/politics"><span class="topic-link">Politics</span></a>
-    <a href="#category/social"><span class="topic-link">Social</span></a>
-    <a href="#category/economics"><span class="topic-link">Economics</span></a>
-    <a href="#category/sport"><span class="topic-link selected">Sports</span></a>
-    <a href="#category/science"><span class="topic-link">Science</span></a>
+    <a href="#"><span class="topic-link">General</span></a>
+    <a href="#category/business"><span class="topic-link">Business English</span></a>
+    <a href="#category/toefl"><span class="topic-link">For TOEFL</span></a>
+    <a href="#category/gmat"><span class="topic-link">For GMAT</span></a>
+    <a href="#category/hobby"><span class="topic-link selected">Hobby</span></a>
+    <a href="#category/travel"><span class="topic-link">Travel</span></a>
     <a href="#category/tech"><span class="topic-link">Tech</span></a>
-    <a href="#category/culture"><span class="topic-link">Culture</span></a>
-    <a href="#category/world"><span class="topic-link">World</span></a>
+    <a href="#category/iregullar"><span class="topic-link">Irregular verbs</span></a>
+    <a href="#category/sport"><span class="topic-link">Sport</span></a>
 </nav>
