--- a/client/templates/difficulty.hbs
+++ b/client/templates/difficulty.hbs
@@ -1,5 +1,1 @@
-<h1>Choose lexica you want to improve:</h1>
-
-<h2>{{ difficulty }}</h2>
-<span class="language-lvl-selector-btn easier">Previous</span>
-<span class="language-lvl-selector-btn harder">Next</span>
+<h1>Choose lexica you want to improve</h1>
