--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,15 +12,15 @@
     </section>
     <section class="mobile-navigation-holder">
         <nav class="mobile-navigation">
-            <a href="#" class="selected">Top Stories</a>
-            <a href="#category/politics">Politics</a>
-            <a href="#category/social">Social</a>
-            <a href="#category/economics">Economics</a>
-            <a href="#category/sport">Sports</a>
-            <a href="#category/science">Science</a>
+            <a href="#">General</a>
+            <a href="#category/business">Business English</a>
+            <a href="#category/toefl">For TOEFL</a>
+            <a href="#category/gmat">For GMAT</a>
+            <a href="#category/hobby"><span class="topic-link selected">Hobby</a>
+            <a href="#category/travel">Travel</a>
             <a href="#category/tech">Tech</a>
-            <a href="#category/culture">Culture</a>
-            <a href="#category/world">World</a>
+            <a href="#category/iregullar">Irregular verbs</a>
+            <a href="#category/sport">Sport</a>
         </nav>
     </section>
 
