Changed Why to How

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
 
     <header class="main-header">
         <h1>UpVoc</h1>
-        <h2>improve your English vocabulary. <span class="highlight-color pointer j-show-about">Why?</span></h2>
+        <h2>improve your English vocabulary. <span class="highlight-color pointer j-show-about">How?</span></h2>
         <div class="mobile-about-project hide"><span class="message">Efficiently upgrade your English vocabulary throug reading actual news from CNN, BBC, TechCruch, USAToday, Forbes and others.</span></div>
     </header>
 
