--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,7 +16,7 @@
             <a href="#category/business">Business English</a>
             <a href="#category/toefl">For TOEFL</a>
             <a href="#category/gmat">For GMAT</a>
-            <a href="#category/hobby"><span class="topic-link selected">Hobby</a>
+            <a href="#category/hobby">Hobby</a>
             <a href="#category/travel">Travel</a>
             <a href="#category/tech">Tech</a>
             <a href="#category/iregullar">Irregular verbs</a>
