--- a/client/templates/menu.hbs
+++ b/client/templates/menu.hbs
@@ -3,7 +3,7 @@
     <a href="#category/business"><span class="topic-link">Business English</span></a>
     <a href="#category/toefl"><span class="topic-link">For TOEFL</span></a>
     <a href="#category/gmat"><span class="topic-link">For GMAT</span></a>
-    <a href="#category/hobby"><span class="topic-link selected">Hobby</span></a>
+    <a href="#category/gre"><span class="topic-link selected">For GRE</span></a>
     <a href="#category/travel"><span class="topic-link">Travel</span></a>
     <a href="#category/tech"><span class="topic-link">Tech</span></a>
     <a href="#category/iregullar"><span class="topic-link">Irregular verbs</span></a>
