--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,5 +34,8 @@
 
 </section>
 <aside class="sidebar">
-    <div class="about-project hide"><span class="message">Efficiently upgrade your English vocabulary throug reading actual news from CNN, BBC, TechCruch, USAToday, Forbes and others.</span></div>
+    <div class="about-project hide">
+        <span class="message">Prepare for reading part of TOEFL, IELTS, GMAT and GRE tests by reading  real actual news and articles from CNN, Forbes, The Economist and other popular news sites. </span>
+        <span class="message">Chose type of vocabulary (for example - business English or GMAT) than you want to improve and we will find articles with most consistent  presence of this type of lexica.</span>
+    </div>
 </aside>
