Added paragraphs for how

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,8 +6,8 @@
         <h1>UpVoc</h1>
         <h2>improve your English vocabulary. <span class="highlight-color pointer j-show-about">How?</span></h2>
         <div class="mobile-about-project hide">
-            <span class="message">Prepare for reading part of TOEFL, IELTS, GMAT and GRE tests by reading  real actual news and articles from CNN, Forbes, The Economist and other popular news sites. </span>
-            <span class="message">Chose type of vocabulary (for example - business English or GMAT) than you want to improve and we will find articles with most consistent  presence of this type of lexica.</span>
+            <p class="message">Prepare for reading part of TOEFL, IELTS, GMAT and GRE tests by reading  real actual news and articles from CNN, Forbes, The Economist and other popular news sites. </p>
+            <p class="message">Chose type of vocabulary (for example - business English or GMAT) than you want to improve and we will find articles with most consistent  presence of this type of lexica.</p>
         </div>
     </header>
 
@@ -20,10 +20,6 @@
             <a href="#category/toefl">For TOEFL</a>
             <a href="#category/gmat">For GMAT</a>
             <a href="#category/gre">For GRE</a>
-            <a href="#category/travel">Travel</a>
-            <a href="#category/tech">Tech</a>
-            <a href="#category/iregullar">Irregular verbs</a>
-            <a href="#category/sport">Sport</a>
         </nav>
     </section>
 
@@ -35,7 +31,7 @@
 </section>
 <aside class="sidebar">
     <div class="about-project hide">
-        <span class="message">Prepare for reading part of TOEFL, IELTS, GMAT and GRE tests by reading  real actual news and articles from CNN, Forbes, The Economist and other popular news sites. </span>
-        <span class="message">Chose type of vocabulary (for example - business English or GMAT) than you want to improve and we will find articles with most consistent  presence of this type of lexica.</span>
+        <p class="message">Prepare for reading part of TOEFL, IELTS, GMAT and GRE tests by reading  real actual news and articles from CNN, Forbes, The Economist and other popular news sites. </p>
+        <p class="message">Chose type of vocabulary (for example - business English or GMAT) than you want to improve and we will find articles with most consistent  presence of this type of lexica.</p>
     </div>
 </aside>
