Added irregular verbs

--- a/client/templates/menu.hbs
+++ b/client/templates/menu.hbs
@@ -3,5 +3,6 @@
     <a href="#category/business"><span class="topic-link">Business English</span></a>
     <a href="#category/toefl"><span class="topic-link">For TOEFL</span></a>
     <a href="#category/gmat"><span class="topic-link">For GMAT</span></a>
-    <a href="#category/gre"><span class="topic-link selected">For GRE</span></a>
+    <a href="#category/gre"><span class="topic-link">For GRE</span></a>
+    <a href="#category/irregular">><span class="topic-link">Irregular verbs</span></a>
 </nav>
