--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,6 +20,7 @@
             <a href="#category/toefl">For TOEFL</a>
             <a href="#category/gmat">For GMAT</a>
             <a href="#category/gre">For GRE</a>
+            <a href="#category/irregular">Irregular verbs</a>
         </nav>
     </section>
 
