--- a/client/templates/menu.hbs
+++ b/client/templates/menu.hbs
@@ -4,5 +4,5 @@
     <a href="#category/toefl"><span class="topic-link">For TOEFL</span></a>
     <a href="#category/gmat"><span class="topic-link">For GMAT</span></a>
     <a href="#category/gre"><span class="topic-link">For GRE</span></a>
-    <a href="#category/irregular">><span class="topic-link">Irregular verbs</span></a>
+    <a href="#category/irregular"><span class="topic-link">Irregular verbs</span></a>
 </nav>
