--- a/client/templates/menu.hbs
+++ b/client/templates/menu.hbs
@@ -1,8 +1,8 @@
 <nav class="topics j-topics">
-    <a href="#"><span class="topic-link">General</span></a>
-    <a href="#category/business"><span class="topic-link">Business English</span></a>
-    <a href="#category/toefl"><span class="topic-link">For TOEFL</span></a>
-    <a href="#category/gmat"><span class="topic-link">For GMAT</span></a>
-    <a href="#category/gre"><span class="topic-link">For GRE</span></a>
-    <a href="#category/irregular"><span class="topic-link">Irregular verbs</span></a>
+    <a href="#"><span class="topic-link" onclick="counter.reachGoal('category-click', 'general')">General</span></a>
+    <a href="#category/business" onclick="counter.reachGoal('category-click', 'bussines')"><span class="topic-link">Business English</span></a>
+    <a href="#category/toefl" onclick="counter.reachGoal('category-click', 'toefl')"><span class="topic-link">For TOEFL</span></a>
+    <a href="#category/gmat" onclick="counter.reachGoal('category-click', 'gmat')"><span class="topic-link">For GMAT</span></a>
+    <a href="#category/gre" onclick="counter.reachGoal('category-click', 'gre')"><span class="topic-link">For GRE</span></a>
+    <a href="#category/irregular" onclick="counter.reachGoal('category-click', 'irregular')"><span class="topic-link">Irregular verbs</span></a>
 </nav>
