--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,6 +31,8 @@ style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика" tit
                     clickmap:true,
                     trackLinks:true,
                     accurateTrackBounce:true});
+
+            w.counter = w.yaCounter26600358;
         } catch(e) { }
     });
 
