Added show more button

--- a/client/templates/episode.hbs
+++ b/client/templates/episode.hbs
@@ -15,8 +15,8 @@
     <div class="content hideContent">
       <p> {{{ body }}} </p>
     </div>
-    <div id="show-more">
-      <a href="#">Show more</a>
+    <div class="show-more">
+      <a>Show more</a>
     </div>
   </div>
 
@@ -44,7 +44,6 @@
 <style>
 div.text-container {
   margin: 0 auto;
-  width: 75%;
 }
 
 .hideContent {
@@ -70,6 +69,7 @@ p {
 .show-more {
   padding: 10px 0;
   text-align: center;
+  cursor: pointer;
 }
 
 </style>
