--- a/client/templates/episode.hbs
+++ b/client/templates/episode.hbs
@@ -14,12 +14,12 @@
 
     <div class="content hideContent">
       <p> {{{ body }}} </p>
+      <span>Original article: </span><a href="{{{ link }}}">{{{ link }}}</a>
     </div>
     <div class="show-more">
       <a>Show more</a>
     </div>
   </div>
-
 </div>
 
 <script type="text/javascript">
