--- a/client/templates/episode.hbs
+++ b/client/templates/episode.hbs
@@ -14,7 +14,7 @@
 
     <div class="content hideContent">
       <p> {{{ body }}} </p>
-      <span>Original article: </span><a href="{{{ link }}}" target="_blank">{{{ link }}}</a>
+      <span>Original article: </span><a href="{{{ link }}}" target="_blank">{{{ originalArticleLink }}}</a>
     </div>
     <div class="show-more">
       <a>Show more</a>
