--- a/client/templates/menu.hbs
+++ b/client/templates/menu.hbs
@@ -1,8 +1,11 @@
 <nav class="topics j-topics">
-    <a href="#"><span class="topic-link" onclick="counter.reachGoal('category-click', 'general')">General</span></a>
-    <a href="#category/business" onclick="counter.reachGoal('category-click', 'bussines')"><span class="topic-link">Business English</span></a>
-    <a href="#category/toefl" onclick="counter.reachGoal('category-click', 'toefl')"><span class="topic-link">For TOEFL</span></a>
-    <a href="#category/gmat" onclick="counter.reachGoal('category-click', 'gmat')"><span class="topic-link">For GMAT</span></a>
-    <a href="#category/gre" onclick="counter.reachGoal('category-click', 'gre')"><span class="topic-link">For GRE</span></a>
-    <a href="#category/irregular" onclick="counter.reachGoal('category-click', 'irregular')"><span class="topic-link">Irregular verbs</span></a>
+    <a href="#"><span class="topic-link">Top Stories</span></a>
+    <a href="#category/general/politics" onclick="counter.reachGoal('category-click', 'general')"><span class="topic-link">Politics</span></a>
+    <a href="#category/general/social" onclick="counter.reachGoal('category-click', 'social')"><span class="topic-link">Social</span></a>
+    <a href="#category/general/economics" onclick="counter.reachGoal('category-click', 'economics')"><span class="topic-link">Economics</span></a>
+    <a href="#category/general/sport" onclick="counter.reachGoal('category-click', 'sport')"><span class="topic-link">Sports</span></a>
+    <a href="#category/general/science" onclick="counter.reachGoal('category-click', 'science')"><span class="topic-link">Science</span></a>
+    <a href="#category/general/tech" onclick="counter.reachGoal('category-click', 'tech')"><span class="topic-link">Tech</span></a>
+    <a href="#category/general/culture" onclick="counter.reachGoal('category-click', 'culture')"><span class="topic-link">Culture</span></a>
+    <a href="#category/general/world" onclick="counter.reachGoal('category-click', 'world')"><span class="topic-link">World</span></a>
 </nav>
