Added mobile navigation

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,12 +15,15 @@
     </section>
     <section class="mobile-navigation-holder">
         <nav class="mobile-navigation">
-            <a href="#">General</a>
-            <a href="#category/business">Business English</a>
-            <a href="#category/toefl">For TOEFL</a>
-            <a href="#category/gmat">For GMAT</a>
-            <a href="#category/gre">For GRE</a>
-            <a href="#category/irregular">Irregular verbs</a>
+            <a href="#">Top Stories</a>
+            <a href="#category/general/politics" onclick="counter.reachGoal('category-click', 'general')">Politics</a>
+            <a href="#category/general/social" onclick="counter.reachGoal('category-click', 'social')">Social</a>
+            <a href="#category/general/economics" onclick="counter.reachGoal('category-click', 'economics')">Economics</a>
+            <a href="#category/general/sport" onclick="counter.reachGoal('category-click', 'sport')">Sports</a>
+            <a href="#category/general/science" onclick="counter.reachGoal('category-click', 'science')">Science</a>
+            <a href="#category/general/tech" onclick="counter.reachGoal('category-click', 'tech')">Tech</a>
+            <a href="#category/general/culture" onclick="counter.reachGoal('category-click', 'culture')">Culture</a>
+            <a href="#category/general/world" onclick="counter.reachGoal('category-click', 'world')">World</a>
         </nav>
     </section>
 
