Changed links text

--- a/client/templates/layout.hbs
+++ b/client/templates/layout.hbs
@@ -12,8 +12,8 @@
         <h1>My english level:</h1>
 
         <h2>Intermediate</h2>
-        <span class="language-lvl-selector-btn easier">Easier</span>
-        <span class="language-lvl-selector-btn harder">Harder</span>
+        <span class="language-lvl-selector-btn easier">Previous</span>
+        <span class="language-lvl-selector-btn harder">Next</span>
     </section>
 
     <section class="articles"><!-- Toggle class «loading» for loading spinner -->
