--- a/client/templates/difficulty.hbs
+++ b/client/templates/difficulty.hbs
@@ -1,5 +1,5 @@
 <h1>My english level:</h1>
 
 <h2>{{ difficulty }}</h2>
-<span class="language-lvl-selector-btn easier">Easier</span>
-<span class="language-lvl-selector-btn harder">Harder</span>
+<span class="language-lvl-selector-btn easier">Previous</span>
+<span class="language-lvl-selector-btn harder">Next</span>
