Deleted unnecessary routing

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,14 +16,14 @@
     <section class="mobile-navigation-holder">
         <nav class="mobile-navigation">
             <a href="#">Top Stories</a>
-            <a href="#category/general/politics" onclick="counter.reachGoal('category-click', 'general')">Politics</a>
-            <a href="#category/general/social" onclick="counter.reachGoal('category-click', 'social')">Social</a>
-            <a href="#category/general/economics" onclick="counter.reachGoal('category-click', 'economics')">Economics</a>
-            <a href="#category/general/sport" onclick="counter.reachGoal('category-click', 'sport')">Sports</a>
-            <a href="#category/general/science" onclick="counter.reachGoal('category-click', 'science')">Science</a>
-            <a href="#category/general/tech" onclick="counter.reachGoal('category-click', 'tech')">Tech</a>
-            <a href="#category/general/culture" onclick="counter.reachGoal('category-click', 'culture')">Culture</a>
-            <a href="#category/general/world" onclick="counter.reachGoal('category-click', 'world')">World</a>
+            <a href="#category/politics" onclick="counter.reachGoal('category-click', 'general')">Politics</a>
+            <a href="#category/social" onclick="counter.reachGoal('category-click', 'social')">Social</a>
+            <a href="#category/economics" onclick="counter.reachGoal('category-click', 'economics')">Economics</a>
+            <a href="#category/sport" onclick="counter.reachGoal('category-click', 'sport')">Sports</a>
+            <a href="#category/science" onclick="counter.reachGoal('category-click', 'science')">Science</a>
+            <a href="#category/tech" onclick="counter.reachGoal('category-click', 'tech')">Tech</a>
+            <a href="#category/culture" onclick="counter.reachGoal('category-click', 'culture')">Culture</a>
+            <a href="#category/world" onclick="counter.reachGoal('category-click', 'world')">World</a>
         </nav>
     </section>
 
