--- a/client/templates/menu.hbs
+++ b/client/templates/menu.hbs
@@ -1,11 +1,11 @@
 <nav class="topics j-topics">
     <a href="#"><span class="topic-link">Top Stories</span></a>
-    <a href="#category/general/politics" onclick="counter.reachGoal('category-click', 'general')"><span class="topic-link">Politics</span></a>
-    <a href="#category/general/social" onclick="counter.reachGoal('category-click', 'social')"><span class="topic-link">Social</span></a>
-    <a href="#category/general/economics" onclick="counter.reachGoal('category-click', 'economics')"><span class="topic-link">Economics</span></a>
-    <a href="#category/general/sport" onclick="counter.reachGoal('category-click', 'sport')"><span class="topic-link">Sports</span></a>
-    <a href="#category/general/science" onclick="counter.reachGoal('category-click', 'science')"><span class="topic-link">Science</span></a>
-    <a href="#category/general/tech" onclick="counter.reachGoal('category-click', 'tech')"><span class="topic-link">Tech</span></a>
-    <a href="#category/general/culture" onclick="counter.reachGoal('category-click', 'culture')"><span class="topic-link">Culture</span></a>
-    <a href="#category/general/world" onclick="counter.reachGoal('category-click', 'world')"><span class="topic-link">World</span></a>
+    <a href="#category/politics" onclick="counter.reachGoal('category-click', 'general')"><span class="topic-link">Politics</span></a>
+    <a href="#category/social" onclick="counter.reachGoal('category-click', 'social')"><span class="topic-link">Social</span></a>
+    <a href="#category/economics" onclick="counter.reachGoal('category-click', 'economics')"><span class="topic-link">Economics</span></a>
+    <a href="#category/sport" onclick="counter.reachGoal('category-click', 'sport')"><span class="topic-link">Sports</span></a>
+    <a href="#category/science" onclick="counter.reachGoal('category-click', 'science')"><span class="topic-link">Science</span></a>
+    <a href="#category/tech" onclick="counter.reachGoal('category-click', 'tech')"><span class="topic-link">Tech</span></a>
+    <a href="#category/culture" onclick="counter.reachGoal('category-click', 'culture')"><span class="topic-link">Culture</span></a>
+    <a href="#category/world" onclick="counter.reachGoal('category-click', 'world')"><span class="topic-link">World</span></a>
 </nav>
