Added dictionary show

--- a/client/styles/sass/screen.sass
+++ b/client/styles/sass/screen.sass
@@ -184,6 +184,19 @@ body
     .message
         font-size: 1.3em
 
+.how
+    z-index: 999
+      
+.about-project.dictionary
+    height: 400px
+    overflow-y: auto
+    left: 0
+    z-index: 998
+
+.mobile-about-project.dictionary
+    height: 200px
+    overflow-y: auto
+
 
 // Navigation
 .topics
