--- a/client/styles/sass/screen.sass
+++ b/client/styles/sass/screen.sass
@@ -367,3 +367,27 @@ body
     display: none !important
 .pointer
     cursor: pointer
+
+
+div.text-container
+    margin: 0 auto
+
+.hideContent
+    display: none
+
+.showContent
+    display: block
+
+h1
+    font-size: 24px
+
+p
+    padding: 10px 0
+
+.show-more
+    padding: 10px 0
+    text-align: center
+    cursor: pointer
+
+.highlight
+    background: lime
