--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,19 +5,18 @@
     <header class="main-header">
         <h1>UpVoc</h1>
         <h2>improve your English vocabulary. <span onclick="counter.reachGoal('how')" class="highlight-color pointer j-show-about">How?</span></h2>
-        <h2><span class="highlight-color pointer j-show-dictionary">Show dictionary</span></h2>
         <div class="mobile-about-project mobile-how hide">
             <p class="message">Prepare for reading part of TOEFL, IELTS, GMAT and GRE tests by reading  real actual news and articles from CNN, Forbes, The Economist and other popular news sites. </p>
             <p class="message">Chose type of vocabulary (for example - business English or GMAT) than you want to improve and we will find articles with most consistent  presence of this type of lexica.</p>
         </div>
         <div class="mobile-about-project dictionary hide">
-            <p class="message">Prepare for reading part of TOEFL, IELTS, GMAT and GRE tests by reading  real actual news and articles from CNN, Forbes, The Economist and other popular news sites. </p>
-            <p class="message">Chose type of vocabulary (for example - business English or GMAT) than you want to improve and we will find articles with most consistent  presence of this type of lexica.</p>
+            <div class="message"></div>
         </div>
     </header>
 
     <section class="language-lvl-selector j-languageLVL">
     </section>
+
     <section class="mobile-navigation-holder">
         <nav class="mobile-navigation">
             <a href="#">Top Stories</a>
@@ -42,9 +41,5 @@
     <div class="about-project how hide">
         <p class="message">Prepare for reading part of TOEFL, IELTS, GMAT and GRE tests by reading  real actual news and articles from CNN, Forbes, The Economist and other popular news sites. </p>
         <p class="message">Chose type of vocabulary (for example - business English or GMAT) than you want to improve and we will find articles with most consistent  presence of this type of lexica.</p>
-    </div>
-    <div class="about-project dictionary hide">
-        <div class="message">
-        </div>
     </div>
 </aside>
