--- a/client/templates/difficulty.hbs
+++ b/client/templates/difficulty.hbs
@@ -3,3 +3,9 @@
 <h2>{{ difficulty }}</h2>
 <span class="language-lvl-selector-btn easier">Previous</span>
 <span class="language-lvl-selector-btn harder">Next</span>
+<hr/>
+<h2 class="dictionary-header"><span class="highlight-color pointer j-show-dictionary">Show dictionary</span></h2>
+<div class="about-project dictionary hide">
+    <div class="message">
+    </div>
+</div>
