--- a/client/templates/episode.hbs
+++ b/client/templates/episode.hbs
@@ -10,6 +10,7 @@
 
   <p>{{{ description }}}</p>
 
+{{#if body}}
   <div class="text-container">
 
     <div class="content hideContent">
@@ -20,4 +21,6 @@
       <a>Show more</a>
     </div>
   </div>
+{{/if}}
+
 </div>
