--- a/client/templates/difficulty.hbs
+++ b/client/templates/difficulty.hbs
@@ -6,6 +6,8 @@
 <hr/>
 <h2 class="dictionary-header"><span class="highlight-color pointer j-show-dictionary">Show dictionary</span></h2>
 <div class="about-project dictionary hide">
+    <div class="user-controls">
+    </div>
     <div class="message">
     </div>
 </div>
