--- a/client/styles/sass/screen.sass
+++ b/client/styles/sass/screen.sass
@@ -197,6 +197,7 @@ body
     .message
         overflow-y: scroll
         height: 100%
+        text-align: left
 
 .mobile-about-project.dictionary
     .message
@@ -419,3 +420,5 @@ p
     text-align: left
     border-bottom: 1px solid #ccc
     padding-bottom: 10px
+    div
+        margin: 5px
