--- a/client/styles/sass/screen.sass
+++ b/client/styles/sass/screen.sass
@@ -422,3 +422,10 @@ p
     padding-bottom: 10px
     div
         margin: 5px
+
+
+.show-next
+    display: none
+
+.show-next.show
+    display: block
