--- a/client/templates/controls.hbs
+++ b/client/templates/controls.hbs
@@ -6,10 +6,10 @@
     </select>
 </div>
 <div>
-    <label for="language-select">Show</label>
-    <select id="language-select">
-        <option>Full dictionary</option>
-        <option>10 random words</option>
+    <label for="random-select">Show</label>
+    <select id="random-select" class="random-select">
+        <option value="0">Full dictionary</option>
+        <option value="1">10 random words</option>
     </select>
 </div>
 <div>
