--- a/client/templates/difficulty.hbs
+++ b/client/templates/difficulty.hbs
@@ -8,6 +8,6 @@
 <div class="about-project dictionary hide">
     <div class="user-controls">
     </div>
-    <div class="message">
+    <div class="dictionary-view">
     </div>
 </div>
