--- a/client/styles/sass/screen.sass
+++ b/client/styles/sass/screen.sass
@@ -196,7 +196,7 @@ body
         display: none
     .message
         overflow-y: scroll
-        height: 100%
+        height: 280px
         text-align: left
 
 .mobile-about-project.dictionary
