--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,8 @@
             <p class="message">Chose type of vocabulary (for example - business English or GMAT) than you want to improve and we will find articles with most consistent  presence of this type of lexica.</p>
         </div>
         <div class="mobile-about-project dictionary hide">
-            <div class="message"></div>
+            <div class="mobile-user-controls"></div>
+            <div class="mobile-dictionary-view"></div>
         </div>
     </header>
 
