--- a/client/styles/sass/screen.sass
+++ b/client/styles/sass/screen.sass
@@ -188,15 +188,16 @@ body
     z-index: 999
       
 .about-project.dictionary
-    height: 400px
+    height: 420px
     overflow-y: hidden
     left: 510px
     z-index: 998
+    top: 0
     +breakpoint(ipad)
         display: none
     .message
         overflow-y: scroll
-        height: 280px
+        height: 300px
         text-align: left
 
 .mobile-about-project.dictionary
