поддержка нескольких языков

--- a/client/templates/controls.hbs
+++ b/client/templates/controls.hbs
@@ -1,8 +1,12 @@
 <div>
     <label for="language-select">My language</label>
-    <select id="language-select">
-        <option>English</option>
-        <option>Chinese</option>
+    <select class="language-select" id="language-select" name="language">
+        <option value="chinese">Chinese</option>
+        <option value="arabic">Arabic</option>
+        <option value="portugal">Portugal</option>
+        <option value="russian">Russian</option>
+        <option value="spanish">Spanish</option>
+        <option value="turkish">Turkish</option>
     </select>
 </div>
 <div>
