--- a/client/styles/sass/screen.sass
+++ b/client/styles/sass/screen.sass
@@ -435,3 +435,45 @@ p
     div
         display: inline-block
         margin: 10px
+
+
+.word:hover
+    color: #05a
+    cursor: pointer
+
+.word
+    display: inline
+    position: relative
+
+
+.word:hover
+    color: #c00
+    text-decoration: none
+
+
+.word:hover:after
+    background: #111
+    background: rgba(0,0,0,.8)
+    border-radius: .5em
+    bottom: 1.35em
+    color: #fff
+    content: attr(title)
+    display: block
+    left: 1em
+    padding: .3em 1em
+    position: absolute
+    text-shadow: 0 1px 0 #000
+    white-space: nowrap
+    z-index: 98
+
+.word:hover:before
+    border: solid
+    border-color: #111 transparent
+    border-color: rgba(0,0,0,.8) transparent
+    border-width: .4em .4em 0 .4em
+    bottom: 1em
+    content: ""
+    display: block
+    left: 2em
+    position: absolute
+    z-index: 99
