--- a/client/styles/sass/screen.sass
+++ b/client/styles/sass/screen.sass
@@ -363,7 +363,11 @@ body
     p
         font-size: 1.4em
         line-height: 1.3em
-        padding-top: .2em
+        padding: .2em 0 0 0
+    .content
+        font-size: 1.4em
+        line-height: 1.3em
+
     .illustration
         background-color: adjust-lightness($border-color, 8%)
         +background-size(cover)
