Отбил article link

--- a/client/templates/episode.hbs
+++ b/client/templates/episode.hbs
@@ -14,7 +14,7 @@
         {{#if body}}
             <div class="content hideContent">
                {{{ body }}}
-              <span>Original article: </span><a href="{{{ link }}}" target="_blank">{{{ originalArticleLink }}}</a>
+              <span class="original-article-link">Original&nbsp;article:&nbsp;<a href="{{{ link }}}" target="_blank">{{{ originalArticleLink }}}</a></span>
             </div>
             <div class="show-more">
               <a>Show more</a>
