Added transcription to dicts; added dict name on save

--- a/views/dictionary-edit.handlebars
+++ b/views/dictionary-edit.handlebars
@@ -28,6 +28,7 @@
             {{#each dictionary.words}}
                 <p>
                     {{{ this.text }}} <a href="/word/{{{ this._id }}}/delete">Delete</a>
+                    [{{ this.translation.transcription }}]
                     <ul>
                         {{#each this.translation.translations}}
                             <li>— {{ this.text }}</li>
