--- a/client/templates/episode.hbs
+++ b/client/templates/episode.hbs
@@ -1,4 +1,4 @@
-<h1><a href="{{ link }}" target="_blank" onclick="counter.reachGoal('inside-article')">{{ title }}</a></h1>
+<h1><a>{{{ title }}}</a></h1>
 
 <a href="#" class="post-time">{{ name }} – {{ formattedDate }}</a>
 
