Added source filter

--- a/client/templates/controls.hbs
+++ b/client/templates/controls.hbs
@@ -10,6 +10,19 @@
     </select>
 </div>
 <div>
+    <label for="source-select">News source</label>
+    <select class="source-select" id="source-select" name="source">
+        <option value="">All</option>
+        <option value="cnn.com">CNN</option>
+        <option value="bbc.com">BBC</option>
+        <option value="economist.com">Economist</option>
+        <option value="usatoday.com">USAtoday</option>
+        <option value="forbes.com">Forbes</option>
+        <option value="telegraph.co.uk">Telegraph</option>
+        <option value="techcrunch.com">Techcrunch</option>
+    </select>
+</div>
+<div>
     <label for="random-select">Show</label>
     <select id="random-select" class="random-select">
         <option value="0">Full dictionary</option>
