Now img opens episod

--- a/client/templates/episode.hbs
+++ b/client/templates/episode.hbs
@@ -3,7 +3,7 @@
 <a class="post-time">{{ name }} – {{ formattedDate }}</a>
 
 {{#if image}}
-    <a href="#" class="illustration" style="background-image: url('{{ image }}')" onclick="counter.reachGoal('inside-article')"></a>
+    <a class="illustration" style="background-image: url('{{ image }}')" onclick="counter.reachGoal('inside-article')"></a>
 {{/if}}
 
 <div class="text-container">
