--- a/client/templates/controls.hbs
+++ b/client/templates/controls.hbs
@@ -30,6 +30,10 @@
     </select>
 </div>
 <div>
+    <input type="checkbox" {{#if highlightDict }}checked="checked"{{/if}} class="highlight-switcher" id="highlight-switcher"/>
+    <label for="highlight-switcher">Highlight from</label>
+</div>
+<div>
     <input type="checkbox" {{#if highlight }}checked="checked"{{/if}} class="highlight-switcher" id="highlight-switcher"/>
     <label for="highlight-switcher">Highlight words</label>
 </div>
