--- a/client/templates/controls.hbs
+++ b/client/templates/controls.hbs
@@ -30,8 +30,8 @@
     </select>
 </div>
 <div>
-    <input type="checkbox" {{#if highlightDict }}checked="checked"{{/if}} class="highlight-switcher" id="highlight-switcher"/>
-    <label for="highlight-switcher">Highlight from</label>
+    <input type="checkbox" {{#if highlightDict }}checked="checked"{{/if}} class="dict-highlight-switcher" id="dict-highlight-switcher"/>
+    <label for="dict-highlight-switcher">Highlight from dict</label>
 </div>
 <div>
     <input type="checkbox" {{#if highlight }}checked="checked"{{/if}} class="highlight-switcher" id="highlight-switcher"/>
