--- a/client/styles/sass/screen.sass
+++ b/client/styles/sass/screen.sass
@@ -346,7 +346,7 @@ body
         .loading-spinner
             display: block
 .article
-    padding: 1.5em .5em
+    padding: 1.5em 1.5em
     border-bottom: solid 1px adjust-lightness($border-color, 8%)
     &:last-child
         border-bottom-color: transparent
